Fixed card shape on small screens

--- a/app/components/Deck.css
+++ b/app/components/Deck.css
@@ -82,7 +82,7 @@
     left: 0;
     margin-bottom: 20px;
     width: 100%;
-    max-width: 350px;
+    width: 350px;
   }
 
   .card.slid {
